--- a/viz/index.html
+++ b/viz/index.html
@@ -1,68 +1,227 @@
 <!doctype html>
 <html lang="tr">
+<head>
 <meta charset="utf-8" />
-<title>CEM Görsel Demo (tek dosya)</title>
+<title>CEM — Basit Görsel Simülasyon (tek dosya)</title>
+<meta name="viewport" content="width=device-width,initial-scale=1" />
 <style>
-  body{font-family:system-ui,Arial;margin:24px}
-  .ring{position:relative;width:320px;height:320px;border:1px dashed #999;border-radius:50%}
-  .em{position:absolute;width:26px;height:26px;border-radius:50%;background:#ddd;left:147px;top:147px;
-      transform-origin:13px 113px; transition:transform 80ms, background 80ms}
-  .em.on{background:#4caf50; transform:scale(1.15) rotate(var(--rot)) translateY(-113px)}
-  .em.off{background:#ddd; transform:rotate(var(--rot)) translateY(-113px)}
-  #panel{margin-top:12px}
+  :root{--size:360px; --dot:26px; --radius:140px;}
+  body{font-family:system-ui,Arial,Segoe UI; margin:24px; color:#111; background:#111; color:#f5f5f5}
+  h1{font-size:18px;margin:0 0 12px}
+  .wrap{display:flex; gap:24px; flex-wrap:wrap}
+  .ring{position:relative; width:var(--size); height:var(--size); border:1px dashed #666; border-radius:50%; background:conic-gradient(#1b1b1b, #0f0f0f)}
+  .em{position:absolute; width:var(--dot); height:var(--dot); border-radius:50%; left:calc(50% - var(--dot)/2); top:calc(50% - var(--dot)/2);
+      transform-origin:calc(var(--dot)/2) calc(var(--radius) + var(--dot)/2); transition:transform 80ms}
+  .em::after{content:""; position:absolute; inset:0; border-radius:50%; background:#bdbdbd; box-shadow:0 0 0 1px #000 inset, 0 0 10px #0006}
+  .em.on::after{background:#31d158; box-shadow:0 0 0 1px #0b2212 inset, 0 0 12px #31d158}
+  .needle{position:absolute; left:calc(50% - 1px); top:calc(50% - var(--radius) - 6px); width:2px; height:calc(var(--radius) + 6px); background:#ffb300; transform-origin:50% calc(100% - 6px)}
+  .panel{min-width:320px; max-width:520px}
+  fieldset{border:1px solid #333; border-radius:10px; padding:12px 12px 6px; margin:0 0 12px; background:#191919}
+  legend{padding:0 6px; color:#ccc}
+  label{display:flex; align-items:center; gap:8px; margin:6px 0; font-size:14px}
+  input,select{background:#0f0f0f; color:#fff; border:1px solid #333; border-radius:8px; padding:6px 8px}
+  input[type="number"]{width:90px}
+  input[type="text"]{width:100%}
+  .row{display:flex; gap:10px; flex-wrap:wrap}
+  button{background:#2a6df4; color:#fff; border:none; border-radius:10px; padding:8px 12px; cursor:pointer}
+  button.secondary{background:#333}
+  button:disabled{opacity:.6; cursor:not-allowed}
+  .stats{font:13px/1.4 monospace; color:#aaa; margin-top:8px}
+  .footer{opacity:.7; font-size:12px; margin-top:6px}
 </style>
-<div class="ring" id="ring"></div>
-<div id="panel">
-  <button id="play">Oynat</button>
-  <span id="angle">0°</span>
-</div>
+</head>
+<body>
+  <h1>CEM — Basit Görsel Simülasyon</h1>
+  <div class="wrap">
+    <div class="ring" id="ring">
+      <div class="needle" id="needle"></div>
+      <!-- EM noktaları JS ile eklenecek -->
+    </div>
+
+    <div class="panel">
+      <fieldset>
+        <legend>Çalıştır</legend>
+        <div class="row">
+          <button id="btnStart">Başlat</button>
+          <button id="btnStop"  class="secondary">Durdur</button>
+          <button id="btnReset" class="secondary">Sıfırla</button>
+        </div>
+        <div class="stats" id="stats">t=0.000s • açı=0.0° • rpm=300.0 • aktif=[]</div>
+      </fieldset>
+
+      <fieldset>
+        <legend>Parametreler</legend>
+        <label>EM sayısı (N)
+          <input type="number" id="inpN" min="1" max="64" value="6"/>
+        </label>
+        <label>Başlangıç açıları (derece, virgülle)
+          <input type="text" id="inpAngles" value="0,60,120,180,240,300"/>
+        </label>
+        <div class="row">
+          <label>Dwell (°)
+            <input type="number" id="inpDwell" min="1" max="180" step="1" value="40"/>
+          </label>
+          <label>Mod
+            <select id="inpMode">
+              <option value="1">Tekli</option>
+              <option value="2" selected>İkili (komşu ile)</option>
+            </select>
+          </label>
+        </div>
+        <div class="row">
+          <label>Hız (RPM)
+            <input type="number" id="inpRPM" step="1" value="300"/>
+          </label>
+          <label>Adım (ms)
+            <input type="number" id="inpStep" step="1" value="50"/>
+          </label>
+          <label>Yön
+            <select id="inpDir">
+              <option value="1" selected>CW (+)</option>
+              <option value="-1">CCW (−)</option>
+            </select>
+          </label>
+        </div>
+      </fieldset>
+
+      <fieldset>
+        <legend>Kısayol</legend>
+        <div class="row">
+          <button class="secondary" id="btnLoad6x60">6×60° yükle</button>
+          <button class="secondary" id="btnLoad8x45">8×45° yükle</button>
+        </div>
+        <div class="footer">İpucu: Parametreleri değiştirip <b>Başlat</b>’a bas. İğne rotor açısını gösterir.</div>
+      </fieldset>
+    </div>
+  </div>
+
 <script>
-  // DEMO verisi (gömülü)
-  const DEMO = [
-    {"t":0.00,"angle":0,"speed_rpm":300,"active":[0,1]},
-    {"t":0.04,"angle":24,"speed_rpm":300,"active":[0,1]},
-    {"t":0.08,"angle":48,"speed_rpm":300,"active":[0,1]},
-    {"t":0.12,"angle":72,"speed_rpm":300,"active":[1,2]},
-    {"t":0.16,"angle":96,"speed_rpm":300,"active":[1,2]},
-    {"t":0.20,"angle":120,"speed_rpm":300,"active":[1,2]},
-    {"t":0.24,"angle":144,"speed_rpm":300,"active":[2,3]},
-    {"t":0.28,"angle":168,"speed_rpm":300,"active":[2,3]},
-    {"t":0.32,"angle":192,"speed_rpm":300,"active":[3,4]},
-    {"t":0.36,"angle":216,"speed_rpm":300,"active":[3,4]},
-    {"t":0.40,"angle":240,"speed_rpm":300,"active":[4,5]},
-    {"t":0.44,"angle":264,"speed_rpm":300,"active":[4,5]},
-    {"t":0.48,"angle":288,"speed_rpm":300,"active":[5,0]},
-    {"t":0.52,"angle":312,"speed_rpm":300,"active":[5,0]},
-    {"t":0.56,"angle":336,"speed_rpm":300,"active":[5,0]}
-  ];
+/* ======= Yardımcılar ======= */
+const ring = document.getElementById('ring');
+const needle = document.getElementById('needle');
+const stats = document.getElementById('stats');
 
-  // Halkayı kur
-  const N = 6;
-  const ring = document.getElementById('ring');
-  const angleEl = document.getElementById('angle');
-  const nodes = [];
-  for (let i=0;i<N;i++){
-    const d = document.createElement('div');
-    d.className = 'em off';
-    d.style.setProperty('--rot', `${(360/N)*i}deg`);
+const $ = id => document.getElementById(id);
+const inpN = $("inpN"), inpAngles=$("inpAngles"), inpDwell=$("inpDwell"),
+      inpMode=$("inpMode"), inpRPM=$("inpRPM"), inpStep=$("inpStep"),
+      inpDir=$("inpDir");
+
+const btnStart=$("btnStart"), btnStop=$("btnStop"), btnReset=$("btnReset");
+const btnLoad6x60=$("btnLoad6x60"), btnLoad8x45=$("btnLoad8x45");
+
+function wrap360(a){ a%=360; if(a<0)a+=360; return a; }
+function angDistCCW(from,to){ let d=wrap360(to-from); if(d<0)d+=360; return d; }
+
+/* ======= Sim durumları ======= */
+let N=6;
+let angles=[0,60,120,180,240,300];
+let dwell=40;
+let mode=2; // 1 tek, 2 ikili
+let rpm=300;
+let stepMs=50;
+let dir=1;
+
+let timeS=0, angle=0;
+let timer=null;
+let emNodes=[];
+
+/* ======= UI kur ======= */
+function drawNodes(){
+  // eski düğümleri temizle
+  emNodes.forEach(n=>n.remove());
+  emNodes=[];
+  for(let i=0;i<N;i++){
+    const d=document.createElement('div');
+    d.className='em';
+    d.style.transform=`rotate(${(360/N)*i}deg) translateY(calc(-1* var(--radius)))`;
     ring.appendChild(d);
-    nodes.push(d);
+    emNodes.push(d);
   }
+}
+drawNodes();
 
-  function render(st){
-    angleEl.textContent = `${st.angle.toFixed(1)}°`;
-    nodes.forEach((n,i)=>{
-      const on = st.active.includes(i);
-      n.className = `em ${on ? 'on' : 'off'}`;
-    });
+function readParamsFromUI(){
+  N = Math.max(1, Math.min(64, parseInt(inpN.value||"6")));
+  // açı dizisini oku
+  angles = (inpAngles.value||"")
+    .split(",")
+    .map(s=>parseFloat(s.trim()))
+    .filter(v=>!Number.isNaN(v))
+    .map(wrap360)
+    .slice(0,64);
+  if(angles.length!==N){
+    // N ile uyumsuzsa, eşit aralıklı doldur
+    angles = [...Array(N)].map((_,i)=> (360/N)*i);
+    inpAngles.value = angles.join(",");
   }
+  dwell = parseFloat(inpDwell.value||"40");
+  mode  = parseInt(inpMode.value||"1");
+  rpm   = parseFloat(inpRPM.value||"300");
+  stepMs= parseFloat(inpStep.value||"50");
+  dir   = parseInt(inpDir.value||"1");
+  // N değiştiyse noktaları yeniden çiz
+  if(emNodes.length!==N) drawNodes();
+}
 
-  async function play(arr){
-    for (const st of arr){
-      render(st);
-      await new Promise(r=>setTimeout(r, 50));
+function setPreset(n, stepDeg){
+  inpN.value = n;
+  inpAngles.value = [...Array(n)].map((_,i)=> i*stepDeg).join(",");
+  readParamsFromUI();
+}
+
+btnLoad6x60.onclick = ()=> setPreset(6,60);
+btnLoad8x45.onclick = ()=> setPreset(8,45);
+
+/* ======= EM durum güncelleme ======= */
+function computeActive(angleDeg){
+  const active = new Set();
+  for(let i=0;i<N;i++){
+    const aOn   = wrap360(angles[i]);
+    const aOff  = wrap360(aOn + dwell);
+    const dOn   = angDistCCW(aOn, angleDeg);
+    const span  = angDistCCW(aOn, aOff);
+    const inside = (dOn>=0 && dOn<span);
+    if(inside){
+      active.add(i);
+      if(mode===2) active.add((i+1)%N);
     }
   }
-  document.getElementById('play').onclick = ()=> play(DEMO);
+  return [...active].sort((a,b)=>a-b);
+}
+
+function render(){
+  const act = computeActive(angle);
+  for(let i=0;i<N;i++){
+    emNodes[i].classList.toggle('on', act.includes(i));
+  }
+  needle.style.transform = `rotate(${angle}deg)`;
+  stats.textContent = `t=${timeS.toFixed(3)}s • açı=${wrap360(angle).toFixed(1)}° • rpm=${rpm.toFixed(1)} • aktif=[${act.join(",")}]`;
+}
+
+/* ======= Sim döngüsü ======= */
+function tick(){
+  const dt = stepMs/1000;
+  timeS += dt;
+  angle = wrap360(angle + 360*(rpm/60)*dt*dir);
+  render();
+}
+
+btnStart.onclick = ()=>{
+  readParamsFromUI();
+  if(timer) return;
+  timer = setInterval(tick, stepMs);
+};
+btnStop.onclick = ()=>{
+  if(timer){ clearInterval(timer); timer=null; }
+};
+btnReset.onclick = ()=>{
+  if(timer){ clearInterval(timer); timer=null; }
+  timeS=0; angle=0;
+  render();
+};
+
+readParamsFromUI();
+render();
 </script>
+</body>
 </html>
