--- a/viz/index.html
+++ b/viz/index.html
@@ -3,140 +3,317 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>CEM Görsel Sim — v2.1</title>
+<title>CEM — Coil Ring UI (tek dosya)</title>
 <style>
   :root{
-    --size: 420px;      /* halka boyu */
-    --radius: 160px;    /* çember yarıçapı */
-    --dot: 22px;        /* nokta çapı */
-    --posR: var(--radius); /* yerleşim yarıçapı (çevre=radius, merkez=0) */
-    --fg:#e7e7ea; --muted:#9aa0a6; --ring:#2a2f3a;
+    --ring: 520px;          /* dış halka çapı */
+    --coil-w: 56px;         /* bobin genişliği */
+    --coil-h: 28px;         /* bobin yüksekliği */
+    --radius: 200px;        /* bobinlerin yarıçapı (merkezden uzaklık) */
+    --disc: 280px;          /* rotor diski çapı */
+    --bg: #0a0b0f;
+    --line: #19202a;
+    --glow: #57ff9a;
   }
-  *{box-sizing:border-box} html,body{height:100%}
+  *{box-sizing:border-box}
+  html,body{height:100%}
   body{
-    margin:0; font-family:Inter,system-ui,Arial; color:var(--fg);
-    background: radial-gradient(1200px 800px at 20% 0%, #121722, #0a0c12 60%);
-    display:grid; place-items:center; padding:24px;
+    margin:0;
+    background: radial-gradient(1000px 700px at 20% -10%, #0f121a, var(--bg) 60%);
+    color:#e9eef6; font:14px/1.5 Inter, system-ui, -apple-system, Segoe UI, Arial;
+    display:grid; place-items:center; padding:20px;
   }
-  .card{width:min(980px,95vw); background:#0d1118; border:1px solid #1a1f2b; border-radius:16px; box-shadow:0 20px 60px #0008; padding:18px}
-  .wrap{display:grid; grid-template-columns: 1fr 320px; gap:22px; align-items:center}
-  @media (max-width:900px){ .wrap{grid-template-columns:1fr} }
+  .stage{
+    width:min(1100px, 96vw);
+    display:grid; grid-template-columns: 1fr 320px; gap:28px; align-items:center;
+  }
+  @media (max-width:1000px){ .stage{grid-template-columns: 1fr} }
 
-  /* RING */
-  .ring{
-    position:relative; width:var(--size); height:var(--size); margin:auto; border-radius:50%;
+  /* --- RING AREA --- */
+  .arena{
+    position:relative;
+    width:var(--ring); height:var(--ring);
+    margin:auto; border-radius:50%;
+    /* beyaz-gri halka görünümü */
     background:
-      radial-gradient(circle at 50% 50%, #0d1118 40%, #0c1016 41%),
-      conic-gradient(#19202c, #0f1520);
-    outline:1px dashed var(--ring); outline-offset:-14px;
-    box-shadow: inset 0 0 60px #000a;
+      radial-gradient(circle at 50% 50%, #10141c 40%, #0c1119 41%),
+      conic-gradient(#111722, #101723 40%, #0f1521);
+    box-shadow: inset 0 0 40px #000;
   }
-  .center-dot{
-    position:absolute; left:50%; top:50%;
-    width:10px; height:10px; margin:-5px 0 0 -5px; background:#1f2733; border-radius:50%; box-shadow:0 0 0 2px #000 inset;
+  /* dış çemberler */
+  .ring-outline, .ring-outline2{
+    position:absolute; inset:10px; border-radius:50%;
+    border: 10px solid #e9eef61c;
+    box-shadow: 0 0 0 1px #ffffff08 inset;
   }
+  .ring-outline2{ inset:60px; border-color:#9ad7ff22 }
+  /* ince kılavuz çizgi */
+  .guide{ position:absolute; inset:0; border-radius:50%; border:1px dashed #293142; }
+
+  /* rotor diski */
+  .disc{
+    position:absolute; left:50%; top:50%; transform:translate(-50%,-50%);
+    width:var(--disc); height:var(--disc); border-radius:50%;
+    background:
+      radial-gradient(circle at 35% 30%, #e9eef6 0%, #d5dce6 35%, #c1c9d4 60%, #a6b0bd 100%);
+    box-shadow:
+      inset 6px -8px 14px #9aa3b1aa,
+      inset -10px 12px 24px #ffffff99,
+      0 12px 40px #0008;
+    filter:saturate(.9) contrast(1.05);
+  }
+  .hub{
+    position:absolute; left:50%; top:50%; transform:translate(-50%,-50%);
+    width:68px; height:68px; border-radius:50%;
+    background: radial-gradient(circle at 35% 35%, #7b8591, #505a67 60%, #3e4652);
+    box-shadow: inset 0 0 0 6px #cdd3dc55, 0 6px 14px #0009;
+  }
+  .axle{
+    position:absolute; left:50%; top:50%; transform:translate(-50%,-50%);
+    width:16px; height:16px; border-radius:50%; background:#2a333f;
+    box-shadow: inset 0 0 0 3px #111820;
+  }
+
+  /* rotor iğnesi (açı göstergesi) */
   .needle{
-    position:absolute; left:50%; top:50%;
-    width:2px; height:calc(var(--radius) + 14px);
-    background:linear-gradient(#ffc400,#ff8c00);
-    transform-origin:50% calc(100% - 14px);
-    transform: translate(-50%,-50%) rotate(0deg);
-    border-radius:1px; box-shadow:0 0 12px #ffbf00aa;
+    position:absolute; left:50%; top:50%; transform:translate(-50%,-100%) rotate(0deg);
+    width:4px; height:calc(var(--radius) + 28px);
+    background:linear-gradient(#ffc400,#ff9900);
+    transform-origin:50% calc(100% - 28px);
+    border-radius:2px; box-shadow:0 0 14px #ffb30080;
   }
 
-  /* DOTS — merkeze göre döndür + yarıçap boyunca taşı */
-  .em{
+  /* --- COILS --- */
+  .coil{
     position:absolute; left:50%; top:50%;
-    width:var(--dot); height:var(--dot); border-radius:50%;
-    /* KRİTİK DÜZELTME: transform-origin ve sırayla rotate→translateY */
-    transform-origin: 50% calc(var(--posR) + var(--dot)/2);
-    transform: translate(-50%,-50%) rotate(var(--rot)) translateY(calc(-1 * var(--posR)));
-    background:#cfd3da; filter:brightness(.65) saturate(.8);
-    box-shadow:0 0 0 1px #0006 inset, 0 4px 10px #0006;
-    transition: filter 120ms ease, box-shadow 120ms ease, transform 120ms ease;
+    width:var(--coil-w); height:var(--coil-h);
+    transform-origin:50% calc(var(--radius) + var(--coil-h)/2);
+    transform: translate(-50%,-50%) rotate(var(--rot)) translateY(calc(-1 * var(--radius)));
+    border-radius:8px; overflow:hidden;
+    box-shadow: 0 2px 10px #0008, 0 6px 22px #0005;
   }
-  .em.on{
-    background:#5df08f; filter:none;
-    box-shadow:0 0 0 1px #0a2613 inset, 0 0 16px #35e07b, 0 4px 10px #0009;
+  .coil .body{
+    position:absolute; inset:0;
+    background:
+      linear-gradient(180deg, #bd7b2a 0%, #a9621f 50%, #bd7b2a 100%); /* bakır */
+  }
+  .coil .capL, .coil .capR{
+    position:absolute; top:0; width:10px; height:100%;
+    background:#5f6b77; filter:brightness(1.15);
+  }
+  .coil .capL{ left:0; box-shadow: inset -2px 0 3px #0005 }
+  .coil .capR{ right:0; box-shadow: inset 2px 0 3px #0005 }
+  .coil.active{ box-shadow: 0 2px 10px #0008, 0 0 30px var(--glow); }
+  .coil.active .body{ filter:brightness(1.1) }
+  .coil.active::after{
+    content:""; position:absolute; right:-12px; top:50%; width:12px; height:12px;
+    margin-top:-6px; border-radius:50%; background:var(--glow); box-shadow:0 0 16px var(--glow);
   }
 
-  .panel{border-left:1px solid #1a1f2b; padding-left:18px}
-  .row{display:flex; gap:8px; flex-wrap:wrap; margin:10px 0}
-  button,select,input{background:#0e121a; color:var(--fg); border:1px solid #1b2130; border-radius:10px; padding:8px 12px; font:600 13px/1 Inter,system-ui,Arial;}
+  /* PANEL */
+  .panel{
+    background:#0e1219; border:1px solid #1a2130; border-radius:14px; padding:14px;
+    box-shadow:0 12px 36px #0007; backdrop-filter: blur(2px);
+  }
+  .panel h3{margin:4px 0 8px; font-size:15px; opacity:.95}
+  .row{display:flex; gap:8px; flex-wrap:wrap; align-items:center; margin:8px 0}
+  button,select,input{
+    background:#0c1119; color:#e9eef6; border:1px solid #1a2230;
+    border-radius:10px; padding:8px 12px; font:600 13px/1 Inter, system-ui, Arial;
+  }
   button{background:linear-gradient(180deg,#2b72ff,#1f59d1); border-color:#2a65e0; cursor:pointer}
-  button.secondary{background:#10141c; border-color:#1b2130}
-  input[type="number"]{width:88px} input[type="text"]{width:100%}
-  .tiny{font:12px; color:var(--muted); margin-top:6px}
-  .stats{font:12px/1.6 ui-monospace, SFMono-Regular, Menlo, Consolas; color:#b9c0c8; background:#0a0d12; border:1px solid #151b26; border-radius:8px; padding:8px}
+  button.secondary{background:#121722}
+  button:disabled{opacity:.6; cursor:not-allowed}
+  input[type="number"]{width:90px}
+  input[type="text"]{width:100%}
+  .stats{font:12px/1.6 ui-monospace, SFMono-Regular, Menlo, Consolas; color:#bcd; background:#090d13; border:1px solid #162033; border-radius:8px; padding:8px; margin-top:8px}
+  .hint{font-size:12px;color:#9aa6b2;margin-top:6px}
 </style>
 </head>
 <body>
-  <div class="card">
-    <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:8px">
-      <div style="font-size:18px;font-weight:700">CEM Görsel Sim — v2.1</div>
-      <div class="tiny">Rotor açısı → EM aktivasyonu (tek dosya)</div>
-    </div>
 
-    <div class="wrap">
-      <div class="ring" id="ring">
-        <div class="center-dot"></div>
-        <div class="needle" id="needle"></div>
-      </div>
+<div class="stage">
+  <!-- Görsel alan -->
+  <div class="arena" id="arena">
+    <div class="ring-outline"></div>
+    <div class="ring-outline2"></div>
+    <div class="guide"></div>
 
-      <div class="panel">
-        <div class="row">
-          <button id="btnStart">Başlat</button>
-          <button id="btnStop" class="secondary">Durdur</button>
-          <button id="btnReset" class="secondary">Sıfırla</button>
-        </div>
-        <div class="row">
-          <label>EM sayısı (N) <input type="number" id="inpN" min="1" max="64" value="6"></label>
-          <label>Mod
-            <select id="inpMode">
-              <option value="1">Tekli</option>
-              <option value="2" selected>İkili</option>
-            </select>
-          </label>
-          <label>Yön
-            <select id="inpDir">
-              <option value="1" selected>CW (+)</option>
-              <option value="-1">CCW (−)</option>
-            </select>
-          </label>
-        </div>
-        <div class="row">
-          <label>Hız (RPM) <input type="number" id="inpRPM" value="300"></label>
-          <label>Adım (ms) <input type="number" id="inpStep" value="40"></label>
-          <label>Dwell (°) <input type="number" id="inpDwell" value="40"></label>
-        </div>
-        <label>Başlangıç açıları (°, virgülle)
-          <input type="text" id="inpAngles" value="0,60,120,180,240,300">
-        </label>
-        <div class="row" style="margin-top:8px">
-          <label>Yerleşim
-            <select id="inpPlace">
-              <option value="edge" selected>Çevre</option>
-              <option value="center">Merkez</option>
-            </select>
-          </label>
-          <button class="secondary" id="btn6x60">6×60°</button>
-          <button class="secondary" id="btn8x45">8×45°</button>
-          <button class="secondary" id="btn12x30">12×30°</button>
-        </div>
+    <div class="disc" id="disc"></div>
+    <div class="hub"></div>
+    <div class="axle"></div>
 
-        <div class="stats" id="stats">t=0.000s • açı=0.0° • rpm=300 • aktif=[]</div>
-        <div class="tiny">İpucu: Parametreleri değiştir → <b>Başlat</b>. “Yerleşim: Merkez” dersen tüm noktalar ortada toplanır.</div>
-      </div>
-    </div>
+    <div class="needle" id="needle"></div>
+    <!-- Coils JS ile eklenecek -->
   </div>
 
+  <!-- Kontrol paneli -->
+  <div class="panel">
+    <h3>Çalıştır</h3>
+    <div class="row">
+      <button id="btnStart">Başlat</button>
+      <button id="btnStop" class="secondary">Durdur</button>
+      <button id="btnReset" class="secondary">Sıfırla</button>
+    </div>
+
+    <h3>Parametreler</h3>
+    <div class="row">
+      <label>EM sayısı (N)
+        <input type="number" id="inpN" min="1" max="64" value="4">
+      </label>
+      <label>Mod
+        <select id="inpMode">
+          <option value="1">Tekli</option>
+          <option value="2" selected>İkili</option>
+        </select>
+      </label>
+      <label>Yön
+        <select id="inpDir">
+          <option value="1" selected>CW (+)</option>
+          <option value="-1">CCW (−)</option>
+        </select>
+      </label>
+    </div>
+    <div class="row">
+      <label>Hız (RPM)
+        <input type="number" id="inpRPM" value="300">
+      </label>
+      <label>Adım (ms)
+        <input type="number" id="inpStep" value="40">
+      </label>
+      <label>Dwell (°)
+        <input type="number" id="inpDwell" value="60">
+      </label>
+    </div>
+    <label>Başlangıç açıları (°, virgülle)
+      <input type="text" id="inpAngles" value="0,90,180,270">
+    </label>
+    <div class="row" style="margin-top:6px">
+      <button class="secondary" id="btn4x90">4×90°</button>
+      <button class="secondary" id="btn6x60">6×60°</button>
+      <button class="secondary" id="btn8x45">8×45°</button>
+    </div>
+
+    <div class="stats" id="stats">t=0.000s • açı=0.0° • rpm=300 • aktif=[]</div>
+    <div class="hint">İpucu: Parametreleri değiştir → <b>Başlat</b>. Yeşil parlak bobin(ler) aktif; sarı iğne rotor açısıdır.</div>
+  </div>
+</div>
+
 <script>
-/* === yardımcılar === */
+/* ===== Utilities ===== */
 const $ = id => document.getElementById(id);
-const clamp = (x,a,b)=> Math.max(a, Math.min(b, x));
 const wrap360 = a => (a%360 + 360) % 360;
+const clamp = (x,a,b)=> Math.max(a, Math.min(b, x));
 const angDistCCW = (from,to)=> { let d = wrap360(to-from); if(d<0) d+=360; return d; };
 
-/* === DOM === */
-const ring=$("ring"), needle=$("needle"), stats=$("stats");
-const inpN=$("inpN"), inpMode=$("
+/* ===== DOM ===== */
+const arena = $("arena");
+const needle = $("needle");
+const disc = $("disc");
+const stats = $("stats");
+
+const inpN=$("inpN"), inpMode=$("inpMode"), inpDir=$("inpDir"),
+      inpRPM=$("inpRPM"), inpStep=$("inpStep"), inpDwell=$("inpDwell"),
+      inpAngles=$("inpAngles");
+const btnStart=$("btnStart"), btnStop=$("btnStop"), btnReset=$("btnReset");
+const btn4x90=$("btn4x90"), btn6x60=$("btn6x60"), btn8x45=$("btn8x45");
+
+/* ===== State ===== */
+let N=4, mode=2, dir=1, rpm=300, stepMs=40, dwell=60;
+let angles=[0,90,180,270];
+let t=0, ang=0, raf=null, last=0;
+let coils=[];
+
+/* ===== Build coils on circumference ===== */
+function buildCoils(){
+  coils.forEach(c=>c.el.remove());
+  coils=[];
+  for(let i=0;i<N;i++){
+    const el = document.createElement('div');
+    el.className = 'coil';
+    el.style.setProperty('--rot', (360/N)*i + 'deg');
+
+    const body = document.createElement('div'); body.className='body';
+    const capL = document.createElement('div'); capL.className='capL';
+    const capR = document.createElement('div'); capR.className='capR';
+    el.append(body,capL,capR);
+    arena.appendChild(el);
+    coils.push({el});
+  }
+}
+buildCoils();
+
+/* ===== Read UI ===== */
+function readUI(){
+  N = clamp(parseInt(inpN.value||"4"),1,64);
+  mode = parseInt(inpMode.value||"2");
+  dir  = parseInt(inpDir.value||"1");
+  rpm  = parseFloat(inpRPM.value||"300");
+  stepMs = parseFloat(inpStep.value||"40");
+  dwell  = parseFloat(inpDwell.value||"60");
+
+  const arr = (inpAngles.value||"")
+    .split(",").map(s=>parseFloat(s.trim()))
+    .filter(v=>!Number.isNaN(v)).map(wrap360);
+  if(arr.length===N){ angles = arr; }
+  else { angles = [...Array(N)].map((_,i)=> i*(360/N)); inpAngles.value = angles.join(","); }
+
+  if(coils.length!==N) buildCoils();
+}
+
+/* ===== Active EMs ===== */
+function activeForAngle(a){
+  const on = new Set();
+  for(let i=0;i<N;i++){
+    const aOn = wrap360(angles[i]);
+    const aOff = wrap360(aOn + dwell);
+    const span = angDistCCW(aOn, aOff);
+    const dOn = angDistCCW(aOn, wrap360(a));
+    if(dOn>=0 && dOn<span){
+      on.add(i);
+      if(mode===2) on.add((i+1)%N);
+    }
+  }
+  return [...on].sort((x,y)=>x-y);
+}
+
+/* ===== Render ===== */
+function render(){
+  const act = activeForAngle(ang);
+  coils.forEach((c,i)=> c.el.classList.toggle('active', act.includes(i)));
+  needle.style.transform = `translate(-50%,-100%) rotate(${ang}deg)`;
+  // diski hafif ters yönde döndürüp hacim hissi
+  disc.style.transform = `translate(-50%,-50%) rotate(${-(ang*0.4)}deg)`;
+  stats.textContent = `t=${t.toFixed(3)}s • açı=${wrap360(ang).toFixed(1)}° • rpm=${rpm.toFixed(1)} • aktif=[${act.join(",")}]`;
+}
+
+/* ===== Loop ===== */
+function loop(now){
+  if(!last) last = now;
+  const dt = (now - last)/1000;
+  const simStep = stepMs/1000;
+  let acc = dt;
+  while(acc >= simStep){
+    t += simStep;
+    ang = wrap360(ang + 360*(rpm/60)*simStep*dir);
+    acc -= simStep;
+  }
+  last = now - acc*1000;
+  render();
+  raf = requestAnimationFrame(loop);
+}
+
+/* ===== Buttons ===== */
+btnStart.onclick=()=>{ readUI(); if(raf) return; last=0; raf=requestAnimationFrame(loop); };
+btnStop.onclick =()=>{ if(raf){ cancelAnimationFrame(raf); raf=null; } };
+btnReset.onclick=()=>{ if(raf){ cancelAnimationFrame(raf); raf=null; } t=0; ang=0; render(); };
+
+btn4x90.onclick = ()=>{ inpN.value=4; inpAngles.value="0,90,180,270"; readUI(); render(); };
+btn6x60.onclick = ()=>{ inpN.value=6; inpAngles.value="0,60,120,180,240,300"; readUI(); render(); };
+btn8x45.onclick = ()=>{ inpN.value=8; inpAngles.value="0,45,90,135,180,225,270,315"; readUI(); render(); };
+
+/* init */
+readUI(); render();
+</script>
+</body>
+</html>
